--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ToadVille Bay Canada – Bienvenue</title>
-  <meta content="Baie de ToadVille – Bienvenue" property="og:title" />
-  <meta content="Trouvez des programmes, des services et de l’information pour les résidents et les nouveaux arrivants de la Baie de ToadVille." property="og:description" />
+  <title>ToadVille Bay Canada – Welcome</title>
+  <meta content="ToadVille Bay – Welcome" property="og:title" />
+  <meta content="Find programs, services and information for residents and newcomers to ToadVille Bay." property="og:description" />
   <meta content="https://toadvillebay.com/" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
@@ -53,88 +53,88 @@
   </header>
 
   <!-- Bannière d’accueil -->
-  <section class="hero" aria-label="Bienvenue">
+  <section class="hero" aria-label="Welcome">
     <div class="hero__content">
-      <h1>Bienvenue dans ToadVille Bay Canada (Français)</h1>
-      <p>Trouvez des programmes, des services et de l’information.</p>
-      <a class="btn-primary" href="#services">Parcourir les services</a>
+      <h1>Welcome to ToadVille Bay Canada (English)</h1>
+      <p>Find programs, services and information.</p>
+      <a class="btn-primary" href="#services">Browse services</a>
     </div>
   </section>
 
   <!-- Grille des sujets / services -->
   <main class="page-content">
     <section id="programs" class="most-requested" aria-labelledby="mr-title">
-      <h2 id="mr-title">Les plus demandés</h2>
+      <h2 id="mr-title">Most requested</h2>
       <ul class="link-list">
-        <li><a href="./TBExit27.html">Sortie 27 de la Baie de ToadVille – Fermeture des opérations aux États-Unis</a></li>
-        <li><a href="./About/piracy.html">Lutte contre le piratage</a></li>
-        <li><a href="./Legal/sanctions.html">Politique de sanctions et d’interdictions</a></li>
-        <li><a href="./About/steam-version-eos.html">Information concernant le soutien de Windows Vista à 8.0</a></li>
-        <li><a href="./prime-minister.html">Premier ministre</a></li>
+        <li><a href="./TBExit27.html">TBExit27</a></li>
+        <li><a href="./About/piracy.html">Anti-piracy</a></li>
+        <li><a href="./Legal/sanctions.html">Sanctions and prohibitions policy</a></li>
+        <li><a href="./About/steam-version-eos.html">Information about Windows Vista to 8.0 support</a></li>
+        <li><a href="./prime-minister.html">Prime Minister</a></li>
       </ul>
     </section>
 
     <section id="services" class="card-grid" aria-labelledby="services-title">
-      <h2 id="services-title">Services et information</h2>
+      <h2 id="services-title">Services and information</h2>
       <div class="grid">
-        <a class="card" href="Immigration/immigration.html" aria-label="Services d’immigration">
+        <a class="card" href="Immigration/immigration.html" aria-label="Immigration services">
           <h3>Immigration</h3>
-          <p>Visas, permis, parrainage familial et ressources d’établissement.</p>
+          <p>Visas, permits, family sponsorship and settlement resources.</p>
         </a>
         <a class="card" href="Provinces/provinces.html" aria-label="Provinces">
           <h3>Provinces</h3>
-          <p>Information sur chaque province et leurs particularités.</p>
+          <p>Information on each province and their unique characteristics.</p>
         </a>
-        <a class="card" href="Cities/cities.html" aria-label="Villes">
-          <h3>Villes</h3>
-          <p>Information sur chaque ville et leurs caractéristiques uniques.</p>
+        <a class="card" href="Cities/cities.html" aria-label="Cities">
+          <h3>Cities</h3>
+          <p>Information on each city and their unique characteristics.</p>
         </a>
         <a class="card" href="Guides/guides" aria-label="Guides">
-          <h3>Guides et conseils</h3>
-          <p>Apprenez à jouer au jeu vidéo ToadVille Bay.</p>
+          <h3>Guides and tips</h3>
+          <p>Learn how to play the ToadVille Bay video game.</p>
         </a>
-        <a class="card" href="Citizenship/citizenship.html" aria-label="Services de citoyenneté">
-          <h3>Citoyenneté</h3>
-          <p>Demande de citoyenneté, examens, cérémonies et preuve de statut.</p>
+        <a class="card" href="Citizenship/citizenship.html" aria-label="Citizenship services">
+          <h3>Citizenship</h3>
+          <p>Citizenship applications, exams, ceremonies and status proof.</p>
         </a>
-        <a class="card" href="Culture and History/cultureandhistory.html" aria-label="Culture et histoire">
-          <h3>Culture et histoire</h3>
-          <p>Découvrez ce qui façonne la Baie de ToadVille.</p>
+        <a class="card" href="Culture and History/cultureandhistory.html" aria-label="Culture and history">
+          <h3>Culture and history</h3>
+          <p>Discover what shapes ToadVille Bay.</p>
         </a>
-        <a class="card" href="Community/community.html" aria-label="Programmes communautaires">
-          <h3>Communauté</h3>
-          <p>Événements, installations et programmes pour les résidents.</p>
+        <a class="card" href="Community/community.html" aria-label="Community programs">
+          <h3>Community</h3>
+          <p>Events, facilities and programs for residents.</p>
         </a>
-        <a class="card" href="Environment/environment.html" aria-label="Environnement">
-          <h3>Environnement</h3>
-          <p>Conservation, parcs et protection du littoral.</p>
+        <a class="card" href="Environment/environment.html" aria-label="Environment">
+          <h3>Environment</h3>
+          <p>Conservation, parks and protection of the coastline.</p>
         </a>
         <a class="card" href="Transportation/transportation.html" aria-label="Transport">
           <h3>Transport</h3>
-          <p>Routes, transport en commun et déplacements actifs.</p>
+          <p>Routes, transport and active travel.</p>
         </a>
-        <a class="card" href="Law/laws.html" aria-label="Droit">
-          <h3>Droit</h3>
-          <p>Consultez les lois de la Baie de ToadVille, les projets de loi et la constitution.</p>
+        <a class="card" href="Law/laws.html" aria-label="Laws">
+          <h3>Laws</h3>
+          <p>Consult the laws of ToadVille Bay, legislation and the constitution.</p>
         </a>
-        <a class="card" href="Wellness/wellness.html" aria-label="Bien-être">
-          <h3>Bien-être</h3>
-          <p>Ressources en santé et possibilités de loisirs.</p>
+        <a class="card" href="Wellness/wellness.html" aria-label="Wellness">
+          <h3>Wellness</h3>
+          <p>Health resources and leisure opportunities.</p>
         </a>
       </div>
     </section>
 
     <section id="news" class="news" aria-labelledby="news-title">
-      <h2 id="news-title">Actualités</h2>
+      <h2 id="news-title">News</h2>
       <article class="news-item">
-        <h3><a href="#">Améliorations annoncées du sentier riverain</a></h3>
-        <p class="meta">Septembre 2025 · Baie de ToadVille</p>
-        <p>La phase 2 comprend un nouvel éclairage, des bancs et une signalisation améliorée.</p>
+        <h3><a href="#">Announcements</a></h3>
+        <p class="meta">September 2025 · ToadVille Bay</p>
+        <p>Phase 2 includes new lighting, benches and improved signage.</p>
       </article>
       <article class="news-item">
-        <h3><a href="#">Nettoyage communautaire d’automne – bénévoles recherchés</a></h3>
-        <p class="meta">Septembre 2025 · Baie de ToadVille</p>
-        <p>Joignez-vous à nous pour garder notre littoral propre et accueillant.</p>
+        <h3><a href="#">Fall community cleanup – volunteers needed</a></h3>
+        <p class="meta">September 2025 · ToadVille Bay</p>
+        <p>Join us to keep our coastline clean and welcoming.</p>
       </article>
     </section>
   </main>
@@ -147,30 +147,30 @@
       </div>
       <div class="footer-links-columns">
         <div>
-          <h4>À propos</h4>
+          <h4>About</h4>
           <ul>
-            <li><a href="#">Notre communauté</a></li>
-            <li><a href="#">Ministères</a></li>
-            <li><a href="#">Carrières</a></li>
-            <li><a href="#">Nous joindre</a></li>
+            <li><a href="#">Our community</a></li>
+            <li><a href="#">Departments</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact us</a></li>
           </ul>
         </div>
         <div>
-          <h4>Ressources</h4>
+          <h4>Resources</h4>
           <ul>
-            <li><a href="#">Programmes et services</a></li>
-            <li><a href="#">Permis et licences</a></li>
-            <li><a href="#">Accessibilité</a></li>
-            <li><a href="#">Plan du site</a></li>
+            <li><a href="#">Programes and Services</a></li>
+            <li><a href="#">Permits and licences</a></li>
+            <li><a href="#">Accesibility</a></li>
+            <li><a href="#">Site map</a></li>
           </ul>
         </div>
         <div>
           <h4>Juridique</h4>
           <ul>
-            <li><a href="./Legal/termsofservice.html">Conditions d’utilisation</a></li>
-            <li><a href="./Legal/privacy.html">Confidentialité</a></li>
-            <li><a href="./Legal/communityguidelines.html">Règles de la communauté</a></li>
-            <li><a href="#">Témoins (cookies)</a></li>
+            <li><a href="./Legal/termsofservice.html">Terms of use</a></li>
+            <li><a href="./Legal/privacy.html">Privacy</a></li>
+            <li><a href="./Legal/communityguidelines.html">Community guidelines</a></li>
+            <li><a href="#">Cookies</a></li>
           </ul>
         </div>
         <div class="site-footer-brand" style="grid-column: 1 / -1; text-align:center;">
