--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 – Page introuvable</title>
+    <title>404 – Page not found</title>
 
     <!-- Chemin absolu pour fonctionner depuis N’IMPORTE quel dossier -->
     <link rel="stylesheet" href="styles.css">
