--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <nav class="navigation-buttons" role="navigation">
                 <button class="nav-btn secondary" onclick="navigateTo('./home.html')">
-                    Entrer sur le site
+                    Enter site
                 </button>
                 <div class="secondary-nav">
                     <button class="nav-btn secondary" onclick="navigateTo('https://qc-ca.toadvillebay.com')">
