--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>404 – Page not found</title>
 
     <!-- Chemin absolu pour fonctionner depuis N’IMPORTE quel dossier -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="error-container">
