--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -47,6 +47,7 @@
         <li><a href="./flag-etiquette.html">Flag Etiquette</a></li>
         <li><a href="./1964reftex.html">1964 Texica Independence Referendum</a></li>
         <li><a href="./1915referendum.html">1915 ToadVille Bay Independence Referendum</a></li>
+        <li><a href="./2026puertovistaref.html">2026 Puerto Valle (Northeastern ToadVille Sur) Sucession Referendum</li>
       </ul>
     </section>
 
