--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -47,7 +47,7 @@
         <li><a href="./flag-etiquette.html">Flag Etiquette</a></li>
         <li><a href="./1964reftex.html">1964 Texica Independence Referendum</a></li>
         <li><a href="./1915referendum.html">1915 ToadVille Bay Independence Referendum</a></li>
-        <li><a href="./2026puertovistaref.html">2026 Puerto Valle (Northeastern ToadVille Sur) Sucession Referendum</li>
+        <li><a href="./2026puertovalleref.html">2026 Puerto Valle (Northeastern ToadVille Sur) Sucession Referendum</a></li>
       </ul>
     </section>
 
@@ -65,6 +65,10 @@
         <a class="card" href="./1915referendum.html" aria-label="1915 referendum">
           <h3>1915 ToadVille Bay Independence Referendum</h3>
           <p>Details on the 1915 referendum and its role in shaping ToadVille Bay.</p>
+        </a>
+        <a class="card" href="./1915referendum.html" aria-label="2026 referendum">
+          <h3>2026 Puerto Valle (Northeastern ToadVille Sur) Sucession Referendum</h3>
+          <p>Details on the 2026 Puerto Valle referendum (ongoing).</p>
         </a>
       </div>
     </section>
