--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -66,7 +66,7 @@
           <h3>1915 ToadVille Bay Independence Referendum</h3>
           <p>Details on the 1915 referendum and its role in shaping ToadVille Bay.</p>
         </a>
-        <a class="card" href="./1915referendum.html" aria-label="2026 referendum">
+        <a class="card" href="./2026puertovalleref.html" aria-label="2026 referendum">
           <h3>2026 Puerto Valle (Northeastern ToadVille Sur) Sucession Referendum</h3>
           <p>Details on the 2026 Puerto Valle referendum (ongoing).</p>
         </a>
