--- a/Culture and History/2026puertovalleref.html
+++ b/Culture and History/2026puertovalleref.html
@@ -104,7 +104,7 @@
           <tr><td>Larkspur</td><td>102,379</td><td>11,016</td><td>89.24%</td></tr>
           <tr><td>Meadowend</td><td>106,334</td><td>11,442</td><td>89.24%</td></tr>
           <tr><td>Mercier</td><td>1,236,807</td><td>133,080</td><td>89.24%</td></tr>
-          <tr><td>Vista</td><td>624,354</td><td>67,181</td><td>89.24%</td></tr>
+          <tr><td><strong>Puerto Vista C.R.</strong></td><td>624,354</td><td>67,181</td><td>89.24%</td></tr>
           <tr><td>Westmere</td><td>105,368</td><td>11,338</td><td>89.24%</td></tr>
         </tbody>
       </table>
