--- a/prime-minister.html
+++ b/prime-minister.html
@@ -186,7 +186,7 @@
 
         <div>
           <h2 id="pm-name" class="pm-title">Prime Minister — Gabriel Medrano</h2>
-          <p class="pm-subtitle"><strong>Aussi connu sous le nom :</strong> GhostVista</p>
+          <p class="pm-subtitle"><strong>also known as:</strong> GhostVista</p>
 
           <div class="pm-meta" aria-label="Key Information">
             <div class="meta-item">
