--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -3,11 +3,11 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aviv — ToadVille Bay</title>
-  <meta content="Aviv — ToadVille Bay" property="og:title" />
-  <meta content="Information and resources for Aviv." property="og:description" />
-  <meta content="https://toadvillebay.com/Provinces/aviv.html" property="og:url" />
-  <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
+  <title>Amilpan — ToadVille Bay</title>
+  <meta content="Amilpan — ToadVille Bay" property="og:title" />
+  <meta content="Information and resources for Amilpan" property="og:description" />
+  <meta content="https://toadvillebay.com/Provinces/amilplan.png" property="og:url" />
+  <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Amilpan.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
   <link rel="icon" type="image/png" href="../Images and Videos/ToadVilleCOA.png" />
   <link rel="apple-touch-icon" href="../Images and Videos/ToadVilleCOA.png" />
@@ -39,22 +39,22 @@
 
   <section class="hero" aria-label="Aviv">
     <div class="hero__content">
-      <h1 class="h1-accent">Aviv</h1>
+      <h1 class="h1-accent">Amilpan</h1>
       <p>Information and resources for the province of Aviv.</p>
     </div>
   </section>
 
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
-      <h2 id="prov-name">Aviv</h2>
-      <img src="../Images and Videos/ToadVille Bay - Aviv.png" alt="Flag of Aviv" class="pm-photo" />
-      <p>This is the official page for the province of Aviv. Content will be added soon.</p>
+      <h2 id="prov-name">Amilpan</h2>
+      <img src="../Images and Videos/ToadVille Bay - Aviv.png" alt="Flag of Amilpan" class="pm-photo" />
+      <p>This is the official page for the province of Amilpan Content will be added soon.</p>
     </section>
 
     <section class="content-block ref-section" aria-labelledby="prov-quick">
       <h2 id="prov-quick">Quick Facts</h2>
       <div class="ref-stats">
-        <div class="ref-card"><strong>Name:</strong> Aviv</div>
+        <div class="ref-card"><strong>Name:</strong> Amilpan</div>
         <div class="ref-card"><strong>Location:</strong> Central</div>
         <div class="ref-card"><strong>Time zone:</strong> Central Time</div>
       </div>
