--- a/Provinces/tepayan.html
+++ b/Provinces/tepayan.html
@@ -3,30 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Eastern ToadVille Sur — ToadVille Bay</title>
-  <meta content="Eastern ToadVille Sur — ToadVille Bay" property="og:title" />
-  <meta content="Information and resources for Eastern ToadVille Sur." property="og:description" />
-  <meta content="https://toadvillebay.com/Provinces/eastern-toadville-sur.html" property="og:url" />
-  <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
+  <title>Tepayán — ToadVille Bay</title>
+  <meta content="Tepayán — ToadVille Bay" property="og:title" />
+  <meta content="Information and resources Tepayán." property="og:description" />
+  <meta content="https://toadvillebay.com/Provinces/tepayan.html" property="og:url" />
+  <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Tepayan.png" property="og:image" />
   <link rel="stylesheet" href="../styles.css" />
   <style>.h1-accent{color:#002244}.pm-photo{max-width:220px;width:100%;height:auto;border-radius:8px;display:block;margin:12px 0}</style>
 </head>
 <body>
   <header class="site-header"><div class="site-header__top"><a class="site-brand" href="/index.html"><img src="../Images and Videos/flag.png" alt="ToadVille Bay" class="brand-mark" /><span class="brand-text">ToadVille Bay</span></a><div class="site-utils"><form class="site-search" role="search" aria-label="Site search" onsubmit="handleSearch(event)"><label for="q" class="sr-only">Search ToadVille Bay</label><input id="q" name="q" type="search" placeholder="Search ToadVille Bay" /><button type="submit">Search</button></form></div></div></header>
-  <section class="hero" aria-label="Eastern ToadVille Sur"><div class="hero__content"><h1 class="h1-accent">Eastern ToadVille Sur</h1><p>Information and resources for Eastern ToadVille Sur.</p></div></section>
+  <section class="hero" aria-label="Tepayán"><div class="hero__content"><h1 class="h1-accent">Tepayán</h1><p>Information and resources for Tepayán.</p></div></section>
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
-      <h2 id="prov-name">Eastern ToadVille Sur</h2>
-      <img src="../Images and Videos/ToadVille Bay - Eastern ToadVille Sur.png" alt="Flag of Eastern ToadVille Sur" class="pm-photo" />
-      <p><strong>Overview:</strong> Eastern ToadVille Sur is a coastal and lowland province on the eastern side of ToadVille Bay, featuring a mix of urban centres and agricultural areas. The province supports fishing, small-scale manufacturing, and coastal tourism.</p>
-      <p><strong>Location:</strong> East</p>
-      <p><strong>Time zone:</strong> Eastern Time</p>
+      <h2 id="prov-name">Tepayán</h2>
+      <img src="../Images and Videos/ToadVille Bay - Tepayán.png" alt="Flag of Tepayán" class="pm-photo" />
+      <p><strong>Overview:</strong> Tepayán is a coastal and highland province on the eastern side of ToadVille Sur, featuring a mix of urban centres and highland areas. The province supports fishing, small-scale manufacturing, and coastal tourism.</p>
+      <p><strong>Location:</strong> West</p>
+      <p><strong>Time zone:</strong> Mountain Time Zone</p>
     </section>
 
     <section class="content-block ref-section" aria-labelledby="demographics">
       <h2 id="demographics">Demographics</h2>
       <p>The province includes a mix of towns and coastal communities with diverse populations. Urban growth has centred around port towns and service hubs.</p>
-      <table class="ref-table" aria-label="Eastern ToadVille Sur statistics">
+      <table class="ref-table" aria-label="Tepayán statistics">
         <thead>
           <tr><th>Statistic</th><th>Value</th></tr>
         </thead>
