--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -40,7 +40,7 @@
   <section class="hero" aria-label="Aviv">
     <div class="hero__content">
       <h1 class="h1-accent">Amilpan</h1>
-      <p>Information and resources for the province of Aviv.</p>
+      <p>Information and resources for the province of Amilpan</p>
     </div>
   </section>
 
