--- a/Provinces/tasiq-nunaat.html
+++ b/Provinces/tasiq-nunaat.html
@@ -3,22 +3,22 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Northern Islands — ToadVille Bay</title>
-  <meta content="Northern Islands — ToadVille Bay" property="og:title" />
-  <meta content="Information and resources for Northern Islands." property="og:description" />
-  <meta content="https://toadvillebay.com/Provinces/northern-islands.html" property="og:url" />
-  <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
+  <title>Tasiq Nunaat — ToadVille Bay</title>
+  <meta content="Tasiq Nunaat — ToadVille Bay" property="og:title" />
+  <meta content="Information and resources for Tasiq Nunaat." property="og:description" />
+  <meta content="https://toadvillebay.com/Provinces/tasiq-nunaat.html" property="og:url" />
+  <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Tasiq Nunaat.png" property="og:image" />
   <link rel="stylesheet" href="../styles.css" />
   <style>.h1-accent{color:#002244}.pm-photo{max-width:220px;width:100%;height:auto;border-radius:8px;display:block;margin:12px 0}</style>
 </head>
 <body>
   <header class="site-header"><div class="site-header__top"><a class="site-brand" href="/index.html"><img src="../Images and Videos/flag.png" alt="ToadVille Bay" class="brand-mark" /><span class="brand-text">ToadVille Bay</span></a><div class="site-utils"><form class="site-search" role="search" aria-label="Site search" onsubmit="handleSearch(event)"><label for="q" class="sr-only">Search ToadVille Bay</label><input id="q" name="q" type="search" placeholder="Search ToadVille Bay" /><button type="submit">Search</button></form></div></div></header>
-  <section class="hero" aria-label="Northern Islands"><div class="hero__content"><h1 class="h1-accent">Northern Islands</h1><p>Information and resources for the Northern Islands.</p></div></section>
+  <section class="hero" aria-label="Northern Islands"><div class="hero__content"><h1 class="h1-accent">Tasiq Nunaat</h1><p>Information and resources for the Tasiq Nunaat.</p></div></section>
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
-      <h2 id="prov-name">Northern Islands</h2>
+      <h2 id="prov-name">Tasiq Nunaat</h2>
       <img src="../Images and Videos/ToadVille Bay - Northern Islands.png" alt="Flag of Northern Islands" class="pm-photo" />
-      <p><strong>Overview:</strong> The Northern Islands are an arctic province characterized by very cold climates, tundra landscapes, and scattered island communities. The region is known for its marine wildlife, northern lights, and traditional seafaring cultures.</p>
+      <p><strong>Overview:</strong> The Tasiq Nunaat are an arctic province characterized by very cold climates, tundra landscapes, and scattered island communities. The region is known for its marine wildlife, northern lights, and traditional seafaring cultures.</p>
       <p><strong>Capital:</strong> Narwhille — the principal settlement and administrative centre located on one of the larger islands.</p>
       <p><strong>Location:</strong> North — arctic and subarctic islands.</p>
       <p><strong>Time zone:</strong> Arctic Time (varies by island; local times may differ)</p>
@@ -26,7 +26,7 @@
 
     <section class="content-block ref-section" aria-labelledby="demographics">
       <h2 id="demographics">Demographics</h2>
-      <p>The Northern Islands have a low population density with small coastal settlements focused on fishing, marine services, and traditional livelihoods. Communities are adapted to cold weather and seasonal sea ice.</p>
+      <p>Tasiq Nunaat have a low population density with small coastal settlements focused on fishing, marine services, and traditional livelihoods. Communities are adapted to cold weather and seasonal sea ice.</p>
       <table class="ref-table" aria-label="Northern Islands statistics">
         <thead>
           <tr><th>Statistic</th><th>Value</th></tr>
@@ -57,7 +57,7 @@
     <section class="content-block ref-section" aria-labelledby="quick-facts">
       <h2 id="quick-facts">Quick Facts</h2>
       <div class="ref-stats">
-        <div class="ref-card"><strong>Province:</strong> Northern Islands</div>
+        <div class="ref-card"><strong>Province:</strong> Tasiq Nunaat</div>
         <div class="ref-card"><strong>Capital:</strong> Narwhille</div>
         <div class="ref-card"><strong>Population:</strong> ~45,000</div>
         <div class="ref-card"><strong>Climate:</strong> Arctic / very cold</div>
