--- a/Provinces/south-sonora.html
+++ b/Provinces/south-sonora.html
@@ -3,27 +3,27 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>South Sonora — ToadVille Bay</title>
-  <meta content="South Sonora — ToadVille Bay" property="og:title" />
-  <meta content="Information and resources for South Sonora." property="og:description" />
-  <meta content="https://toadvillebay.com/Provinces/south-sonora.html" property="og:url" />
-  <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
+  <title>Desierto Altos — ToadVille Bay</title>
+  <meta content="Desierto Altos — ToadVille Bay" property="og:title" />
+  <meta content="Information and resources for Desierto Alts." property="og:description" />
+  <meta content="https://toadvillebay.com/Provinces/desierto-altos.html" property="og:url" />
+  <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Desierto Altos" property="og:image" />
   <link rel="stylesheet" href="../styles.css" />
   <style>.h1-accent{color:#002244}.pm-photo{max-width:220px;width:100%;height:auto;border-radius:8px;display:block;margin:12px 0}</style>
 </head>
 <body>
   <header class="site-header"><div class="site-header__top"><a class="site-brand" href="/index.html"><img src="../Images and Videos/flag.png" alt="ToadVille Bay" class="brand-mark" /><span class="brand-text">ToadVille Bay</span></a><div class="site-utils"><form class="site-search" role="search" aria-label="Site search" onsubmit="handleSearch(event)"><label for="q" class="sr-only">Search ToadVille Bay</label><input id="q" name="q" type="search" placeholder="Search ToadVille Bay" /><button type="submit">Search</button></form></div></div></header>
-  <section class="hero" aria-label="South Sonora"><div class="hero__content"><h1 class="h1-accent">South Sonora</h1><p>Information and resources for South Sonora.</p></div></section>
+  <section class="hero" aria-label="South Sonora"><div class="hero__content"><h1 class="h1-accent">South Sonora</h1><p>Information and resources for Desierto Altos.</p></div></section>
   <main class="page-content">
     <section class="content-block" aria-labelledby="prov-name">
-      <h2 id="prov-name">South Sonora</h2>
-      <img src="../Images and Videos/ToadVille Bay - South Sonora.png" alt="Flag of South Sonora" class="pm-photo" />
-      <p>This is the official page for South Sonora. Content will be added.</p>
+      <h2 id="prov-name">Desierto Altos</h2>
+      <img src="../Images and Videos/ToadVille Bay - Desierto Altos.png" alt="Flag of Desierto Altos" class="pm-photo" />
+      <p>This is the official page for Desierto Altos. Content will be added.</p>
     </section>
     <section class="content-block" aria-labelledby="prov-quick">
       <h2 id="prov-quick">Quick Facts</h2>
       <div class="ref-stats">
-        <div class="ref-card"><strong>Name:</strong> South Sonora</div>
+        <div class="ref-card"><strong>Name:</strong> Desierto Altos</div>
         <div class="ref-card"><strong>Location:</strong> West</div>
         <div class="ref-card"><strong>Time zone:</strong> West Pacific Time</div>
       </div>
