--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -41,18 +41,18 @@
 		<section class="most-requested" aria-labelledby="prov-title">
 			<h2 id="prov-title">Provinces</h2>
 			<ul class="link-list">
-				<li><a href="./aviv.html">Aviv</a></li>
+				<li><a href="./aviv.html">Amilpan</a></li>
 				<li><a href="./distrito-federal.html">Distrito Federal</a></li>
-				<li><a href="./eastern-toadville-sur.html">Eastern ToadVille Sur</a></li>
+				<li><a href="./tepayan.html">Tepayán</a></li>
 				<li><a href="./mihajl.html">Mihajl</a></li>
 				<li><a href="./national-preserve.html">National Preserve</a></li>
-				<li><a href="./northern-islands.html">Northern Islands</a></li>
+				<li><a href="./tasqid-nunaat.html">Tasiq Nunaat</a></li>
 				<li><a href="./sierra.html">Sierra</a></li>
 				<li><a href="./sonora.html">Sonora</a></li>
-				<li><a href="./south-aviv.html">South Aviv</a></li>
-				<li><a href="./south-sonora.html">South Sonora</a></li>
+				<li><a href="./metepan.html">Metepan</a></li>
+				<li><a href="./desierto-altos.html">Desierto Altos</a></li>
 				<li><a href="./texica.html">Texica</a></li>
-				<li><a href="./toadville-island.html">ToadVille Island</a></li>
+				<li><a href="./iledetoadville.html">Île de ToadVille</a></li>
 				<li><a href="./toadville-sur.html">ToadVille Sur</a></li>
 			</ul>
 		</section>
