--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -46,7 +46,7 @@
 				<li><a href="./tepayan.html">Tepayán</a></li>
 				<li><a href="./mihajl.html">Mihajl</a></li>
 				<li><a href="./national-preserve.html">National Preserve</a></li>
-				<li><a href="./tasqid-nunaat.html">Tasiq Nunaat</a></li>
+				<li><a href="./tasiq-nunaat.html">Tasiq Nunaat</a></li>
 				<li><a href="./sierra.html">Sierra</a></li>
 				<li><a href="./sonora.html">Sonora</a></li>
 				<li><a href="./metepan.html">Metepan</a></li>
