--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -41,7 +41,7 @@
 		<section class="most-requested" aria-labelledby="prov-title">
 			<h2 id="prov-title">Provinces</h2>
 			<ul class="link-list">
-				<li><a href="./aviv.html">Amilpan</a></li>
+				<li><a href="./amilpan.html">Amilpan</a></li>
 				<li><a href="./distrito-federal.html">Distrito Federal</a></li>
 				<li><a href="./tepayan.html">Tepayán</a></li>
 				<li><a href="./mihajl.html">Mihajl</a></li>
