--- a/Provinces/tepayan.html
+++ b/Provinces/tepayan.html
@@ -17,7 +17,7 @@
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
       <h2 id="prov-name">Tepayán</h2>
-      <img src="../Images and Videos/ToadVille Bay - Tepayán.png" alt="Flag of Tepayán" class="pm-photo" />
+      <img src="../Images and Videos/ToadVille Bay - Tepayan.png" alt="Flag of Tepayán" class="pm-photo" />
       <p><strong>Overview:</strong> Tepayán is a coastal and highland province on the eastern side of ToadVille Sur, featuring a mix of urban centres and highland areas. The province supports fishing, small-scale manufacturing, and coastal tourism.</p>
       <p><strong>Location:</strong> West</p>
       <p><strong>Time zone:</strong> Mountain Time Zone</p>
