--- a/Provinces/tasiq-nunaat.html
+++ b/Provinces/tasiq-nunaat.html
@@ -17,7 +17,7 @@
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
       <h2 id="prov-name">Tasiq Nunaat</h2>
-      <img src="../Images and Videos/ToadVille Bay - Northern Islands.png" alt="Flag of Northern Islands" class="pm-photo" />
+      <img src="../Images and Videos/ToadVille Bay - Tasiq Nunaat.png" alt="Flag of Northern Islands" class="pm-photo" />
       <p><strong>Overview:</strong> The Tasiq Nunaat are an arctic province characterized by very cold climates, tundra landscapes, and scattered island communities. The region is known for its marine wildlife, northern lights, and traditional seafaring cultures.</p>
       <p><strong>Capital:</strong> Narwhille — the principal settlement and administrative centre located on one of the larger islands.</p>
       <p><strong>Location:</strong> North — arctic and subarctic islands.</p>
