--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -68,7 +68,11 @@
         </a>
         <a class="card" href="./2026puertovalleref.html" aria-label="2026 referendum">
           <h3>2026 Puerto Valle (Northeastern ToadVille Sur) Sucession Referendum</h3>
-          <p>Details on the 2026 Puerto Valle referendum (ongoing).</p>
+          <p>Details on the 2026 Puerto Valle referendum.</p>
+        </a>
+        <a class="card" href="./gabe-the-narwhal.html" aria-label="Gabe The Narwhal">
+          <h3>Gabe The Narwhal</h3>
+          <p>Details about the ToadVille Bay Mascot.</p>
         </a>
       </div>
     </section>
