--- a/Culture and History/gabe-the-narwhal.html
+++ b/Culture and History/gabe-the-narwhal.html
@@ -18,7 +18,7 @@
   <header class="site-header" role="banner">
     <div class="site-header__top">
       <a class="site-brand" href="../index.html">
-        <img src="../Images and Videos/flag.png" alt="ToadVille Bay" class="brand-mark" />
+        <img src="../Images and Videos/Gabe The Narwhal.png" alt="ToadVille Bay" class="brand-mark" />
         <span class="brand-text">ToadVille Bay</span>
       </a>
     </div>
