--- a/Culture and History/gabe-the-narwhal.html
+++ b/Culture and History/gabe-the-narwhal.html
@@ -18,7 +18,7 @@
   <header class="site-header" role="banner">
     <div class="site-header__top">
       <a class="site-brand" href="../index.html">
-        <img src="../Images and Videos/Gabe The Narwhal.png" alt="ToadVille Bay" class="brand-mark" />
+        <img src="../Images and Videos/flag.png" alt="ToadVille Bay" class="brand-mark" />
         <span class="brand-text">ToadVille Bay</span>
       </a>
     </div>
@@ -47,7 +47,7 @@
       <section id="appearance">
         <h2>Appearance</h2>
         <figure>
-          <img src="../Images and Videos/flag.png" alt="Gabe the Narwhal" style="max-width: 400px; height: auto; border: 1px solid #ccc;" />
+          <img src="../Images and Videos/Gabe the Narwhal.png" alt="Gabe the Narwhal" style="max-width: 400px; height: auto; border: 1px solid #ccc;" />
           <figcaption>Gabe the Narwhal, mascot of ToadVille Bay</figcaption>
         </figure>
         <p>
