--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -54,6 +54,10 @@
     <section class="card-grid" aria-labelledby="history-title">
       <h2 id="history-title">History & Events</h2>
       <div class="grid">
+        <a class="card" href="./branding.html" aria-label="Overview of ToadVille Bay Branding">
+          <h3>Brandin  g</h3>
+          <p>Learn more about our branding.</p>
+        </a>
         <a class="card" href="./history-overview.html" aria-label="Overview of ToadVille Bay history">
           <h3>History Overview</h3>
           <p>From early settlements to modern ToadVille Bay: key events and milestones.</p>
