--- a/Culture and History/branding.html
+++ b/Culture and History/branding.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Branding – ToadVille Bay</title>
   <meta content="Branding – ToadVille Bay" property="og:title" />
-  <meta content="Official ToadVille Bay branding assets, including the flag, coat of arms, and wordmarks." property="og:description" />
+  <meta content="Official ToadVille Bay branding assets, including the flag, coat of arms, wordmarks, and cultural icons." property="og:description" />
   <meta content="https://toadvillebay.com/Culture and History/branding.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
@@ -27,71 +27,131 @@
   <section class="hero" aria-label="Branding">
     <div class="hero__content">
       <h1 class="h1-accent">Branding</h1>
-      <p>Official visual identity assets for ToadVille Bay — for web, print, and community use.</p>
+      <p>Official identity assets and cultural icons of ToadVille Bay.</p>
     </div>
   </section>
 
   <main class="page-content">
     <article>
 
-      <section id="intro">
-        <h2>Overview</h2>
+      <section id="overview">
+        <h2>What This Page Is</h2>
         <p>
-          This page contains official ToadVille Bay branding assets, including the national flag,
-          the Coat of Arms, and official wordmarks. Use these when referencing ToadVille Bay in
-          websites, documents, media, events, and community projects.
+          This page contains official ToadVille Bay branding assets and cultural icons.
+          Use these for web, print, media, and community projects when referencing ToadVille Bay.
         </p>
       </section>
 
-      <section id="assets">
-        <h2>Official Branding Assets</h2>
-
-        <figure>
-          <img src="../Images and Videos/flag.png" alt="ToadVille Bay National Flag" style="max-width: 700px; width: 100%; height: auto; border: 1px solid #ccc;" />
-          <figcaption>National Flag (flag.png)</figcaption>
-        </figure>
-
-        <figure>
-          <img src="../Images and Videos/ToadVilleCOA.png" alt="ToadVille Bay Coat of Arms" style="max-width: 420px; width: 100%; height: auto; border: 1px solid #ccc;" />
-          <figcaption>Coat of Arms (ToadVilleCOA.png)</figcaption>
-        </figure>
-
-        <figure>
-          <img src="../Images and Videos/TBWordmarkENCanada.png" alt="ToadVille Bay Wordmark (English — Canada)" style="max-width: 800px; width: 100%; height: auto; border: 1px solid #ccc;" />
-          <figcaption>Wordmark — English (Canada) (TBWordmarkENCanada.png)</figcaption>
-        </figure>
-
-        <figure>
-          <img src="../Images and Videos/TBWordmarkFRCA.png" alt="ToadVille Bay Wordmark (Français — Canada)" style="max-width: 800px; width: 100%; height: auto; border: 1px solid #ccc;" />
-          <figcaption>Wordmark — Français (Canada) (TBWordmarkFRCA.png)</figcaption>
-        </figure>
-      </section>
-
-      <section id="usage">
-        <h2>Brand Use Guidelines</h2>
+      <section id="meaning">
+        <h2>What Each Asset Is Used For</h2>
         <ul>
-          <li><strong>Don’t distort:</strong> Avoid stretching, squishing, or skewing any asset.</li>
-          <li><strong>Keep it readable:</strong> Leave space around the flag, Coat of Arms, and wordmarks so they don’t feel crowded.</li>
-          <li><strong>Respect context:</strong> Don’t use the branding to imply official approval of unofficial groups, products, or events.</li>
-          <li><strong>Stay consistent:</strong> Use the English or French wordmark depending on language context (or both when appropriate).</li>
+          <li>
+            <strong>ToadVille Bay Wordmark (Global Branding):</strong>
+            The official logotype used for global identity and consistent branding across platforms (web, print, media).
+          </li>
+          <li>
+            <strong>TB Coat of Arms, National Flag, and Gabe the Narwhal (Cultural Icons):</strong>
+            Cultural and national symbols used to represent heritage, identity, and community storytelling.
+          </li>
         </ul>
-      </section>
 
-      <section id="downloads">
-        <h2>Files Included</h2>
-        <p>These assets are used on this page:</p>
-        <ul>
-          <li>ToadVilleCOA.png</li>
-          <li>TBWordmarkENCanada.png</li>
-          <li>TBWordmarkFRCA.png</li>
-          <li>flag.png</li>
-        </ul>
-      </section>
-
-      <section id="permissions">
-        <h2>Questions or Permissions</h2>
         <p>
-          For official guidance, licensing, or special use requests, contact the
+          Quick links:
+          <a href="../Culture and History/coa.html">Coat of Arms</a> •
+          <a href="../Culture and History/flag-etiquette.html">ToadVille Bay Flag</a> •
+          <a href="../Culture and History/gabe-the-narwhal.html">Gabe the Narwhal</a>
+        </p>
+      </section>
+
+      <section id="carousel">
+        <h2>Branding Carousel</h2>
+        <p>
+          Use the labels below to switch slides.
+        </p>
+
+        <p aria-label="Carousel navigation">
+          <a href="#slide-wordmark-en">Wordmark (EN)</a> •
+          <a href="#slide-wordmark-fr">Wordmark (FR)</a> •
+          <a href="#slide-flag">Flag</a> •
+          <a href="#slide-coa">Coat of Arms</a>
+        </p>
+
+        <section id="slide-wordmark-en" aria-label="Slide: Wordmark English">
+          <h3>Wordmark — English (Global Branding)</h3>
+          <figure>
+            <img src="../Images and Videos/TBWordmarkENCanada.png" alt="ToadVille Bay Wordmark (English — Canada)" style="max-width: 900px; width: 100%; height: auto; border: 1px solid #ccc;" />
+            <figcaption>TBWordmarkENCanada.png</figcaption>
+          </figure>
+          <p>
+            This wordmark is used for global branding and official identity in English contexts.
+          </p>
+        </section>
+
+        <hr />
+
+        <section id="slide-wordmark-fr" aria-label="Slide: Wordmark French">
+          <h3>Wordmark — Français (Global Branding)</h3>
+          <figure>
+            <img src="../Images and Videos/TBWordmarkFRCA.png" alt="ToadVille Bay Wordmark (Français — Canada)" style="max-width: 900px; width: 100%; height: auto; border: 1px solid #ccc;" />
+            <figcaption>TBWordmarkFRCA.png</figcaption>
+          </figure>
+          <p>
+            This wordmark is used for global branding and official identity in French contexts.
+          </p>
+        </section>
+
+        <hr />
+
+        <section id="slide-flag" aria-label="Slide: Flag">
+          <h3>National Flag (Cultural Icon)</h3>
+          <figure>
+            <img src="../Images and Videos/flag.png" alt="ToadVille Bay National Flag" style="max-width: 900px; width: 100%; height: auto; border: 1px solid #ccc;" />
+            <figcaption>flag.png</figcaption>
+          </figure>
+          <p>
+            The national flag is a cultural icon used for national identity, events, and heritage-related representation.
+            See: <a href="../Culture and History/flag-etiquette.html">ToadVille Bay Flag</a>.
+          </p>
+        </section>
+
+        <hr />
+
+        <section id="slide-coa" aria-label="Slide: Coat of Arms">
+          <h3>Coat of Arms (Cultural Icon)</h3>
+          <figure>
+            <img src="../Images and Videos/ToadVilleCOA.png" alt="ToadVille Bay Coat of Arms" style="max-width: 520px; width: 100%; height: auto; border: 1px solid #ccc;" />
+            <figcaption>ToadVilleCOA.png</figcaption>
+          </figure>
+          <p>
+            The Coat of Arms is a cultural icon used for official heritage representation.
+            See: <a href="../Culture and History/coa.html">Coat of Arms</a>.
+          </p>
+        </section>
+      </section>
+
+      <section id="icons">
+        <h2>Cultural Icons</h2>
+        <p>
+          Alongside the Coat of Arms and Flag, <strong>Gabe the Narwhal</strong> is considered a cultural icon of ToadVille Bay.
+        </p>
+        <p>
+          Learn more here: <a href="../Culture and History/gabe-the-narwhal.html">Gabe the Narwhal</a>.
+        </p>
+      </section>
+
+      <section id="copyright">
+        <h2>Copyright & Permissions</h2>
+        <p>
+          All branding assets and cultural icons shown here are the intellectual property of ToadVille Bay (and/or its
+          associated departments and creators) unless otherwise noted.
+        </p>
+        <ul>
+          <li><strong>Allowed:</strong> Referencing ToadVille Bay in personal, educational, and community projects with respectful use.</li>
+          <li><strong>Not allowed:</strong> Using these assets to imply official endorsement of unofficial products, organizations, or events.</li>
+          <li><strong>Commercial use:</strong> May require permission or licensing approval.</li>
+        </ul>
+        <p>
+          For permissions, licensing, or official use requests, contact the
           <a href="../About/contact.html">Department of Culture and Heritage</a>.
         </p>
       </section>
