--- a/Culture and History/branding.html
+++ b/Culture and History/branding.html
@@ -148,7 +148,7 @@
         <ul>
           <li><strong>Allowed:</strong> Referencing ToadVille Bay in personal, educational, and community projects with respectful use.</li>
           <li><strong>Not allowed:</strong> Using these assets to imply official endorsement of unofficial products, organizations, or events.</li>
-          <li><strong>Commercial use:</strong> May require permission or licensing approval.</li>
+          <li><strong>Commercial use:</strong> Requires permission and licensing approval, email <b>support@toadvillebay.com</b> to learn more.</li>
         </ul>
         <p>
           For permissions, licensing, or official use requests, contact the
