--- a/Culture and History/branding.html
+++ b/Culture and History/branding.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Branding – ToadVille Bay</title>
   <meta content="Branding – ToadVille Bay" property="og:title" />
-  <meta content="Official ToadVille Bay branding assets, including the flag, coat of arms, wordmarks, and cultural icons." property="og:description" />
+  <meta content="Official ToadVille Bay branding assets, cultural icons, and media properties." property="og:description" />
   <meta content="https://toadvillebay.com/Culture and History/branding.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
@@ -27,7 +27,7 @@
   <section class="hero" aria-label="Branding">
     <div class="hero__content">
       <h1 class="h1-accent">Branding</h1>
-      <p>Official identity assets and cultural icons of ToadVille Bay.</p>
+      <p>Official identity assets, cultural icons, and media properties of ToadVille Bay.</p>
     </div>
   </section>
 
@@ -35,10 +35,10 @@
     <article>
 
       <section id="overview">
-        <h2>What This Page Is</h2>
+        <h2>Overview</h2>
         <p>
-          This page contains official ToadVille Bay branding assets and cultural icons.
-          Use these for web, print, media, and community projects when referencing ToadVille Bay.
+          This page documents official branding assets, recognized cultural icons,
+          and notable media properties associated with ToadVille Bay.
         </p>
       </section>
 
@@ -46,17 +46,21 @@
         <h2>What Each Asset Is Used For</h2>
         <ul>
           <li>
-            <strong>ToadVille Bay Wordmark (Global Branding):</strong>
-            The official logotype used for global identity and consistent branding across platforms (web, print, media).
+            <strong>ToadVille Bay Wordmark:</strong>
+            Used for global branding and official identity across platforms.
           </li>
           <li>
-            <strong>TB Coat of Arms, National Flag, and Gabe the Narwhal (Cultural Icons):</strong>
-            Cultural and national symbols used to represent heritage, identity, and community storytelling.
+            <strong>Coat of Arms, National Flag, and Gabe the Narwhal:</strong>
+            Cultural icons representing heritage, identity, and community storytelling.
+          </li>
+          <li>
+            <strong>Media Properties:</strong>
+            Entertainment and storytelling projects that are culturally relevant but not official state symbols.
           </li>
         </ul>
 
         <p>
-          Quick links:
+          Related pages:
           <a href="../Culture and History/coa.html">Coat of Arms</a> •
           <a href="../Culture and History/flag-etiquette.html">ToadVille Bay Flag</a> •
           <a href="../Culture and History/gabe-the-narwhal.html">Gabe the Narwhal</a>
@@ -65,93 +69,96 @@
 
       <section id="carousel">
         <h2>Branding Carousel</h2>
-        <p>
-          Use the labels below to switch slides.
-        </p>
 
-        <p aria-label="Carousel navigation">
+        <p>
           <a href="#slide-wordmark-en">Wordmark (EN)</a> •
           <a href="#slide-wordmark-fr">Wordmark (FR)</a> •
           <a href="#slide-flag">Flag</a> •
           <a href="#slide-coa">Coat of Arms</a>
         </p>
 
-        <section id="slide-wordmark-en" aria-label="Slide: Wordmark English">
+        <section id="slide-wordmark-en">
           <h3>Wordmark — English (Global Branding)</h3>
-          <figure>
-            <img src="../Images and Videos/TBWordmarkENCanada.png" alt="ToadVille Bay Wordmark (English — Canada)" style="max-width: 900px; width: 100%; height: auto; border: 1px solid #ccc;" />
-            <figcaption>TBWordmarkENCanada.png</figcaption>
-          </figure>
-          <p>
-            This wordmark is used for global branding and official identity in English contexts.
-          </p>
+          <img src="../Images and Videos/TBWordmarkENCanada.png" alt="ToadVille Bay Wordmark English" style="max-width:900px;width:100%;border:1px solid #ccc;" />
         </section>
 
         <hr />
 
-        <section id="slide-wordmark-fr" aria-label="Slide: Wordmark French">
+        <section id="slide-wordmark-fr">
           <h3>Wordmark — Français (Global Branding)</h3>
-          <figure>
-            <img src="../Images and Videos/TBWordmarkFRCA.png" alt="ToadVille Bay Wordmark (Français — Canada)" style="max-width: 900px; width: 100%; height: auto; border: 1px solid #ccc;" />
-            <figcaption>TBWordmarkFRCA.png</figcaption>
-          </figure>
-          <p>
-            This wordmark is used for global branding and official identity in French contexts.
-          </p>
+          <img src="../Images and Videos/TBWordmarkFRCA.png" alt="ToadVille Bay Wordmark French" style="max-width:900px;width:100%;border:1px solid #ccc;" />
         </section>
 
         <hr />
 
-        <section id="slide-flag" aria-label="Slide: Flag">
+        <section id="slide-flag">
           <h3>National Flag (Cultural Icon)</h3>
-          <figure>
-            <img src="../Images and Videos/flag.png" alt="ToadVille Bay National Flag" style="max-width: 900px; width: 100%; height: auto; border: 1px solid #ccc;" />
-            <figcaption>flag.png</figcaption>
-          </figure>
-          <p>
-            The national flag is a cultural icon used for national identity, events, and heritage-related representation.
-            See: <a href="../Culture and History/flag-etiquette.html">ToadVille Bay Flag</a>.
-          </p>
+          <img src="../Images and Videos/flag.png" alt="ToadVille Bay Flag" style="max-width:900px;width:100%;border:1px solid #ccc;" />
         </section>
 
         <hr />
 
-        <section id="slide-coa" aria-label="Slide: Coat of Arms">
+        <section id="slide-coa">
           <h3>Coat of Arms (Cultural Icon)</h3>
-          <figure>
-            <img src="../Images and Videos/ToadVilleCOA.png" alt="ToadVille Bay Coat of Arms" style="max-width: 520px; width: 100%; height: auto; border: 1px solid #ccc;" />
-            <figcaption>ToadVilleCOA.png</figcaption>
-          </figure>
-          <p>
-            The Coat of Arms is a cultural icon used for official heritage representation.
-            See: <a href="../Culture and History/coa.html">Coat of Arms</a>.
-          </p>
+          <img src="../Images and Videos/ToadVilleCOA.png" alt="ToadVille Bay Coat of Arms" style="max-width:520px;width:100%;border:1px solid #ccc;" />
         </section>
       </section>
 
-      <section id="icons">
+      <section id="cultural-icons">
         <h2>Cultural Icons</h2>
         <p>
-          Alongside the Coat of Arms and Flag, <strong>Gabe the Narwhal</strong> is considered a cultural icon of ToadVille Bay.
+          <strong>Gabe the Narwhal</strong> is a recognized cultural icon and mascot of ToadVille Bay.
         </p>
         <p>
-          Learn more here: <a href="../Culture and History/gabe-the-narwhal.html">Gabe the Narwhal</a>.
+          Learn more: <a href="../Culture and History/gabe-the-narwhal.html">Gabe the Narwhal</a>
         </p>
+      </section>
+
+      <section id="media">
+        <h2>Media & Entertainment</h2>
+
+        <section id="ghostvista-gets-grounded">
+          <h3>GhostVista Gets Grounded</h3>
+
+          <figure>
+            <img src="../Images and Videos/GVGG CANADA.png"
+                 alt="GhostVista Gets Grounded — Canada"
+                 style="max-width:600px;width:100%;border:1px solid #ccc;" />
+            <figcaption>GhostVista Gets Grounded (GVGG CANADA.png)</figcaption>
+          </figure>
+
+          <p>
+            <strong>GhostVista Gets Grounded</strong> is a YouTube series set within the cultural
+            sphere of ToadVille Bay. The show follows a kid who repeatedly causes trouble
+            and faces the consequences of his actions.
+          </p>
+
+          <p>
+            Rated <strong>TV-14</strong>, the series is intended for a teen audience and uses
+            exaggerated humor and discipline-based storytelling.
+          </p>
+
+          <ul>
+            <li><strong>Category:</strong> Media & Entertainment</li>
+            <li><strong>Status:</strong> Not an official government or national symbol</li>
+            <li><strong>Cultural role:</strong> Part of modern ToadVille Bay internet culture</li>
+          </ul>
+        </section>
       </section>
 
       <section id="copyright">
-        <h2>Copyright & Permissions</h2>
+        <h2>Copyright & Disclaimer</h2>
         <p>
-          All branding assets and cultural icons shown here are the intellectual property of ToadVille Bay (and/or its
-          associated departments and creators) unless otherwise noted.
+          All branding assets and cultural icons shown on this page are the intellectual
+          property of ToadVille Bay or their respective creators unless otherwise stated.
         </p>
-        <ul>
-          <li><strong>Allowed:</strong> Referencing ToadVille Bay in personal, educational, and community projects with respectful use.</li>
-          <li><strong>Not allowed:</strong> Using these assets to imply official endorsement of unofficial products, organizations, or events.</li>
-          <li><strong>Commercial use:</strong> Requires permission and licensing approval, email <b>support@toadvillebay.com</b> to learn more.</li>
-        </ul>
         <p>
-          For permissions, licensing, or official use requests, contact the
+          Media properties such as <strong>GhostVista Gets Grounded</strong> are fictional
+          entertainment works and do not represent official government authority,
+          policy, or endorsement.
+        </p>
+        <p>
+          Commercial or misleading use may require permission from the
           <a href="../About/contact.html">Department of Culture and Heritage</a>.
         </p>
       </section>
