--- a/prime-minister.html
+++ b/prime-minister.html
@@ -7,7 +7,7 @@
   <meta content="Prime Minister of ToadVille Bay Canada — Gabriel Medrano (GhostVista)" property="og:title" />
   <meta content="Profile and information on Gabriel Medrano (alias GhostVista), the Prime Minister of ToadVille Bay Canada — in office since July 3, 2019." property="og:description" />
   <meta content="https://toadvillebay.com/prime-minister.html" property="og:url" />
-  <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
+  <meta content="https://toadvillebay.com/Images and Videos/gabemedgutierrez.jpg" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
   <link rel="icon" type="image/png" href="../Images and Videos/ToadVilleCOA.png" />
   <link rel="apple-touch-icon" href="../Images and Videos/ToadVilleCOA.png" />
@@ -174,19 +174,19 @@
 
   <section class="hero" aria-label="Prime Minister">
     <div class="hero__content">
-      <h1 class="h1-accent">Prime Minister of ToadVille Bay Canada</h1>
-      <p>The Right Honourable Gabriel Medrano – 1st Prime Minister of ToadVille Bay Canada</p>
+      <h1 class="h1-accent">Prime Minister of the <strong>Republic of ToadVille Bay</strong></h1>
+      <p>The Right Honourable Gabriel Medrano Gutiérrez – 1st Prime Minister of the<strong>Republic of ToadVille Bay</strong></p>
     </div>
   </section>
 
   <main class="page-content">
     <section class="content-block" aria-labelledby="pm-name">
       <div class="pm-profile">
-        <img src="Images and Videos/founder.jpg" alt="Gabriel Medrano" class="pm-photo" />
+        <img src="Images and Videos/gabemedgutierrez.jpg" alt="Gabriel Medrano" class="pm-photo" />
 
         <div>
-          <h2 id="pm-name" class="pm-title">Prime Minister — Gabriel Medrano</h2>
-          <p class="pm-subtitle"><strong>also known as:</strong> GhostVista</p>
+          <h2 id="pm-name" class="pm-title">Prime Minister — Gabriel Medrano Gutiérrez</h2>
+          <p class="pm-subtitle"><strong>also known as:</strong> Gabe</p>
 
           <div class="pm-meta" aria-label="Key Information">
             <div class="meta-item">
@@ -210,7 +210,7 @@
           </div>
 
           <p class="pm-summary">
-            Gabriel Medrano is the first Prime Minister of ToadVille Bay Canada. He oversees government operations,
+            Gabriel Medrano Gutíerrez is the first Prime Minister of the <strong>Republic of ToadVille Bay</strong> He oversees government operations,
             community engagement and strategic initiatives. The Prime Minister's Office focuses on economic development,
             public services and representing ToadVille Bay Canada at national and international levels.
           </p>
@@ -219,10 +219,10 @@
     </section>
 
     <section class="content-block" aria-labelledby="pm-bio">
-      <h2 id="pm-bio">About Gabriel Medrano</h2>
+      <h2 id="pm-bio">About Gabriel Medrano Gutiérrez</h2>
       <p>
-        Gabriel Medrano (alias GhostVista) entered office on 3 July 2019. During his tenure, he focused on improving
-        ToadVille Bay Canada through reforms and significant economic initiatives. ToadVille Bay has become one of the largest
+        Gabriel Medrano Gutiérrez entered office on 3 July 2019. During his tenure, he focused on improving
+        ToadVille Bay through reforms and significant economic initiatives. ToadVille Bay has become one of the largest
         economies in the ToadVille narrative universe.
       </p>
       <ul>
@@ -236,7 +236,7 @@
       <h2 id="pm-responsibilities">Responsibilities</h2>
       <p>
         The responsibilities of the Prime Minister include setting government priorities, directing executive policies,
-        coordinating with municipal leaders and representing ToadVille Bay Canada in intergovernmental affairs.
+        coordinating with municipal leaders and representing ToadVille Bay in intergovernmental affairs.
       </p>
     </section>
   </main>
