--- a/prime-minister.html
+++ b/prime-minister.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Prime Minister — ToadVille Bay Canada</title>
-  <meta content="Prime Minister of ToadVille Bay Canada — Gabriel Medrano (GhostVista)" property="og:title" />
-  <meta content="Profile and information on Gabriel Medrano (alias GhostVista), the Prime Minister of ToadVille Bay Canada — in office since July 3, 2019." property="og:description" />
+  <meta content="Prime Minister of ToadVille Bay Canada — Gabriel Medrano Gutiérrez" property="og:title" />
+  <meta content="Profile and information on Gabriel Medrano Gutiérrez, the Prime Minister of ToadVille Bay Canada — in office since July 3, 2019." property="og:description" />
   <meta content="https://toadvillebay.com/prime-minister.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/gabemedgutierrez.jpg" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
