--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main class="landing-content" role="main">
             <div class="header">
                 <img class="site-flag" src="Images and Videos/flag.png" alt="ToadVille Bay Flag" />
-                <h1 class="site-title">Welcome to ToadVille Bay Canada</h1>
+                <h1 class="site-title">Welcome to the Republic of ToadVille Bay</h1>
             </div>
 
             <nav class="navigation-buttons" role="navigation">
