--- a/home.html
+++ b/home.html
@@ -44,9 +44,9 @@
       </a>
       <div class="site-utils">
         <form class="site-search" role="search" aria-label="Recherche sur le site" onsubmit="handleSearch(event)">
-          <label for="q" class="sr-only">Rechercher dans la Baie de ToadVille</label>
+          <label for="q" class="sr-only">Search</label>
           <input id="q" name="q" type="search" placeholder="Rechercher dans la Baie de ToadVille" />
-          <button type="submit">Rechercher</button>
+          <button type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -55,7 +55,7 @@
   <!-- Bannière d’accueil -->
   <section class="hero" aria-label="Welcome">
     <div class="hero__content">
-      <h1>Welcome to ToadVille Bay Canada (English)</h1>
+      <h1>Welcome to the <i>Republic of ToadVille Bay</i></h1>
       <p>Find programs, services and information.</p>
       <a class="btn-primary" href="#services">Browse services</a>
     </div>
