--- a/prime-minister.html
+++ b/prime-minister.html
@@ -174,7 +174,7 @@
 
   <section class="hero" aria-label="Prime Minister">
     <div class="hero__content">
-      <h1 class="h1-accent">Prime Minister of the <strong>Republic of ToadVille Bay</strong></h1>
+      <h1 class="h1-accent">Prime Minister of the <i>Republic of ToadVille Bay</i></h1>
       <p>The Right Honourable Gabriel Medrano Gutiérrez – 1st Prime Minister of the<strong>Republic of ToadVille Bay</strong></p>
     </div>
   </section>
