--- a/about.html
+++ b/about.html
@@ -208,11 +208,11 @@
     <section class="profile-section">
         <div class="profile-images">
             <div class="profile-image">
-                <img src="Images and Videos/founder.jpg" alt="Site owner (IRL)" />
+                <img src="Images and Videos/gabemedgutierrez.jpg" alt="Site owner (IRL)" />
             </div>
         </div>
-        <h1 class="profile-name">Gabriel M.</h1>
-        <p class="profile-title">Creator and designer of ToadVille Bay Canada</p>
+        <h1 class="profile-name">Gabriel Medrano Gutiérrez</h1>
+        <p class="profile-title">Creator and designer of the <i>Republic of ToadVille Bay</i></p>
         <p class="profile-bio">
             A Mexican-American web developer and designer from California, I bring a unique neurodivergent perspective to digital design. As an autistic creator, I’ve channelled my passion for accessibility and user experience into reimagining public services. ToadVille Bay Canada is inspired by a game of the same name, turning its virtual world into an exploration of how government websites could be more engaging and inclusive. This project combines a love of video games with a mission to make public services more accessible and user-friendly for everyone.
         </p>
@@ -221,7 +221,7 @@
     <main class="about-container">
         <div class="about-grid">
             <div class="about-card">
-                <h2>What is ToadVille Bay</h2>
+                <h2>What is the Republic ToadVille Bay</h2>
                 <p>
                     ToadVille Bay is a fictional country set in a universe rich with history and lore, currently in development as a video game. There’s a lot to explore, and ToadVille Bay Canada is also a community project that helps expand the universe far beyond what it is today.
                 </p>
