--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
             </div>
         </div>
         <h1 class="profile-name">Gabriel Medrano Gutiérrez</h1>
-        <p class="profile-title">Creator and designer of the <i>Republic of ToadVille Bay</i></p>
+        <p class="profile-title">Creator and designer of the <strong><em>Republic of ToadVille Bay</em></strong></p>
         <p class="profile-bio">
             A Mexican-American web developer and designer from California, I bring a unique neurodivergent perspective to digital design. As an autistic creator, I’ve channelled my passion for accessibility and user experience into reimagining public services. ToadVille Bay Canada is inspired by a game of the same name, turning its virtual world into an exploration of how government websites could be more engaging and inclusive. This project combines a love of video games with a mission to make public services more accessible and user-friendly for everyone.
         </p>
@@ -221,23 +221,23 @@
     <main class="about-container">
         <div class="about-grid">
             <div class="about-card">
-                <h2>What is the Republic ToadVille Bay</h2>
+                <h2>What is the Republic of ToadVille Bay</h2>
                 <p>
-                    ToadVille Bay is a fictional country set in a universe rich with history and lore, currently in development as a video game. There’s a lot to explore, and ToadVille Bay Canada is also a community project that helps expand the universe far beyond what it is today.
+                    Republic of ToadVille Bay (ROTB, RTB) is a fictional country set in a universe rich with history and lore, currently in development as a video game. There’s a lot to explore, and ToadVille Bay Canada is also a community project that helps expand the universe far beyond what it is today.
                 </p>
             </div>
 
             <div class="about-card">
-                <h2>Project mission</h2>
+                <h2>What is ToadVille Bay Canada v ROTB</h2>
                 <p>
-                    The mission of this project is focused on user experience and satisfaction. Users are not forced to spend money on things they might regret later. When a product is purchased, it belongs to the user, with no extra fees to access essential services.
+                    ToadVille Bay Canada is the buisness name, ROTB is the ficitonal country's name, TB Canada is used for buisness stuff, such as publishing, and merchandise, while ROTB is used for all ToadVille Bay entites in every country as a ficitoanl location within the ToadVIlle Bay Lore.
                 </p>
             </div>
 
             <div class="about-card">
                 <h2>Digital innovation</h2>
                 <p>
-                    ToadVille Bay Canada acts like a fictional government. This website aims to replicate ToadVille Bay services inside the game. You can also find game tips or fan-made wikis here, depending on what works best for you.
+                   The <strong>Republic of ToadVille Bay</strong> acts like a fictional government. This website aims to replicate ToadVille Bay services inside the game. You can also find game tips or fan-made wikis here, depending on what works best for you.
                 </p>
             </div>
         </div>
