Add National Anthem section to cultureandhistory.html
Added a link to the National Anthem section with details about etiquette.

--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -93,6 +93,10 @@
           <p>Guidelines for handling and displaying the ToadVille Bay flag respectfully.</p>
         </a>
       </div>
+      <a class="card" href="./anthem.html" aria-label="Anthem">
+          <h3>National Anthem</h3>
+          <p>Details about the ToadVille Bay National Anthem and its Etiquette</p>
+        </a>
     </section>
 
     <section class="news" aria-labelledby="history-news-title">
