--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -135,24 +135,20 @@
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">♫</div>
             <div>
               <div class="anthem-card-title">Lyrics</div>
-              <div class="anthem-card-meta">
+              <div class="anthem-card-meta">English Version of the National Anthem, not direct translation from the French, Spanish, and ToadVille</div>
+            </div>
+          </div>
                 O ToadVille Bay<br>
                 Our home, our native land<br>
                 True patriot union, in all the united ToadVilles!<br>
                 From East, To West, we see unity<br>
                 ToadVille Our Land<br>
-              </div>
-            </div>
-          </div>
-          <p>[English lyrics placeholder – no links]</p>
         </div>
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">▶</div>
             <div>
               <div class="anthem-card-title">Audio</div>
               <div class="anthem-card-meta">Placeholder recording</div>
@@ -173,18 +169,18 @@
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">♫</div>
             <div>
               <div class="anthem-card-title">Lyrics</div>
-              <div class="anthem-card-meta">Texte de remplacement</div>
+              <div class="anthem-card-meta">French version of the national anthem, distinct from the English version</div>
             </div>
           </div>
-          <p>[Paroles françaises – texte de remplacement, sans lien]</p>
+          Ô Baie d'ToadVille<br>
+          Terre de nos aïeux<br>
+          Ton front est ceint, de fluerons glorieux<br>
         </div>
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">▶</div>
             <div>
               <div class="anthem-card-title">Audio</div>
               <div class="anthem-card-meta">Enregistrement de remplacement</div>
@@ -198,10 +194,9 @@
           </audio>
         </div>
       </div>
-    </section>
 
-          <!-- French -->
-    <div class="anthem-col">
+      
+      <div class="anthem-col">
         <h2>Spanish version</h2>
 
         <div class="anthem-card">
@@ -231,9 +226,8 @@
           </audio>
         </div>
       </div>
-    </section>
 
-          <!-- French -->
+                <!-- French -->
     <div class="anthem-col">
         <h2>ToadVille version</h2>
 
