--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -177,6 +177,14 @@
           Ô Baie d'ToadVille<br>
           Terre de nos aïeux<br>
           Ton front est ceint, de fluerons glorieux<br>
+          Avec des cœurs ardents, nous voyons s'élever<br>
+          ToadVille Norte Terre<br>
+          Ton historie est une épopée de Baie d'ToadVille<br>
+          Ô Baie d'ToadVille<br>
+          De foi trempée<br>
+          Ô Baie d'ToadVille<br>
+          Nous défendons notre terre<br>
+          Protégera nos foyers et nos droits<br>
         </div>
 
         <div class="anthem-card">
