--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -122,7 +122,8 @@
         was officially enacted as the national anthem in <strong>1952</strong>.
       </p>
       <p>
-        The National anthem should be played during events, if on ToadVille Soil, the ToadVille national anthem shall be played first, and at end of an event, shall be played last, there should be no events of clapping once the anthem has concluded
+        The National anthem should be played during events, if on ToadVille Soil, the ToadVille national anthem shall be played first, and at end of an event, shall be played last, there should be no events of clapping once the anthem has concluded<br>
+        It should be noted that the ToadVille Bay National anthem is hevaily based off the<a href="https://www.canada.ca/en/canadian-heritage/services/anthem-canada.html"><a>National Anthem of Canada</a>, ifnot, mostly based, please refer to that.
 
       </p>
     </section>
@@ -140,11 +141,18 @@
               <div class="anthem-card-meta">English Version of the National Anthem, not direct translation from the French, Spanish, and ToadVille</div>
             </div>
           </div>
-                O ToadVille Bay<br>
-                Our home, our native land<br>
-                True patriot union, in all the united ToadVilles!<br>
-                From East, To West, we see unity<br>
-                ToadVille Our Land<br>
+          O ToadVille Bay<br>
+          Our home, our native land<br>
+          True patriot union, in all the united ToadVilles!<br>
+          From East, To West, we see unity<br>
+          The land of ToadVille<br>
+          From East, To West, we see unity<br>
+          The True Land of ToadVille<br>
+          May our land be safe, forever and free<br>
+          O ToadVille Bay<br>
+          Our home and native land<br>
+          O ToadVille Bay<br>
+          May our home, stand on guard<br>
         </div>
 
         <div class="anthem-card">
@@ -176,10 +184,10 @@
           </div>
           Ô Baie d'ToadVille<br>
           Terre de nos aïeux<br>
-          Ton front est ceint, de fluerons glorieux<br>
-          Avec des cœurs ardents, nous voyons s'élever<br>
-          ToadVille Norte Terre<br>
-          Ton historie est une épopée de Baie d'ToadVille<br>
+          Ton front est ceint de fleurons glorieux<br>
+          Avec des cœurs ardents, nous voyons s’élever<br>
+          La terre de ToadVille<br>
+          Ton histoire est une épopée de ToadVille Bay<br>
           Ô Baie d'ToadVille<br>
           De foi trempée<br>
           Ô Baie d'ToadVille<br>
